Added failure examples to ExampleSpec

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,12 @@
     </repositories>
 
     <dependencies>
+        <!-- Compile Dependencies -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.5</version>
+        </dependency>
 
         <!-- Testing -->
         <dependency>
