--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,16 @@
     </repositories>
 
     <dependencies>
+        <dependency>
+            <groupId>com.google.code.guice</groupId>
+            <artifactId>guice</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.6</version>
+        </dependency>
 
         <!-- Testing -->
         <dependency>
